create player class

--- a/L02_SpaceInvaders/index.html
+++ b/L02_SpaceInvaders/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L02 Space Invaders</title>
     <script src='../FudgeCore/FudgeCore.js'></script>
+    <script src='./classes/Player.js'></script>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <h1>Space Invaders</h1>
+    <canvas width=1200 height=900></canvas>
 </body>
 </html>
