add Cover class

--- a/L02_SpaceInvaders/index.html
+++ b/L02_SpaceInvaders/index.html
@@ -7,6 +7,9 @@
     <title>L02 Space Invaders</title>
     <script src='../FudgeCore/FudgeCore.js'></script>
     <script src='./classes/Player.js'></script>
+    <script src='./classes/Boss.js'></script>
+    <script src='./classes/Cover.js'></script>
+    <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
 <body>
