Add player projectiles

--- a/L02_SpaceInvaders/index.html
+++ b/L02_SpaceInvaders/index.html
@@ -10,6 +10,7 @@
     <script src='./classes/Boss.js'></script>
     <script src='./classes/Cover.js'></script>
     <script src='./classes/Invader.js'></script>
+    <script src='./classes/Projectile.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
