add invader / projectile collision

--- a/L02_SpaceInvaders/index.html
+++ b/L02_SpaceInvaders/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L02 Space Invaders</title>
     <script src='../FudgeCore/FudgeCore.js'></script>
+    <script src='./classes/BasicHitboxNode.js'></script>
+    <script src='./classes/InvadersNode.js'></script>
     <script src='./classes/Player.js'></script>
     <script src='./classes/Boss.js'></script>
     <script src='./classes/Cover.js'></script>
