--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoodleSpace</title>
     <script src='../FudgeCore/FudgeCore.js'></script>
+    <script src='./classes/BaseEntity.js'></script>
+    <script src='./classes/Background.js'></script>
+    <script src='./classes/Player.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
