--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -9,6 +9,7 @@
     <script src='./classes/BaseEntity.js'></script>
     <script src='./classes/Background.js'></script>
     <script src='./classes/Player.js'></script>
+    <script src='./classes/Enemies.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
