--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -10,6 +10,7 @@
     <script src='./classes/Background.js'></script>
     <script src='./classes/Player.js'></script>
     <script src='./classes/Enemies.js'></script>
+    <script src='./classes/Projectiles.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
