DoodleSpace: add enemy spawner

--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -11,6 +11,7 @@
     <script src='./classes/Player.js'></script>
     <script src='./classes/Enemies.js'></script>
     <script src='./classes/Projectiles.js'></script>
+    <script src='./classes/Spawner.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
