DoodleSpace: UFOs drop health packs

--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -12,6 +12,7 @@
     <script src='./classes/Enemies.js'></script>
     <script src='./classes/Projectiles.js'></script>
     <script src='./classes/Spawner.js'></script>
+    <script src='./classes/HealthPack.js'></script>
     <script src='functions.js'></script>
     <script src='main.js'></script>
 </head>
