--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoodleSpace</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./normalize.css">
     <script src='../FudgeCore/FudgeCore.js'></script>
     <script src='./classes/BaseEntity.js'></script>
     <script src='./classes/Background.js'></script>
@@ -18,6 +20,10 @@
 </head>
 <body>
     <h1>DoodleSpace</h1>
-    <canvas width=1200 height=900></canvas>
+    <div class="ui_box">
+        <p>HP: <span id="health"></span></p>
+        
+    </div>
+    <canvas class="canvas" width=1200 height=900></canvas>
 </body>
 </html>
