DoodleSpace: add difficulty levels

--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -44,8 +44,8 @@
                 <option value="2">MEDIUM</option>
                 <option value="3">HARD</option>
             </select>
-            <label for="music">Sound?</label>
-            <select name="music" id="music">
+            <label for="sound">Sound?</label>
+            <select name="sound" id="sound">
                 <option value="1">ON</option>
                 <option value="0" selected="selected">OFF</option>
             </select>
