DoodleSpace: add controls info

--- a/DoodleSpace/index.html
+++ b/DoodleSpace/index.html
@@ -51,6 +51,9 @@
                 <option value="0" selected="selected">OFF</option>
             </select>
             <button id="btn_start">START</button>
+            <h2>CONTROLS:</h2>
+            <p>movement: W,A,S,D</p>
+            <p>shoot: SPACE</p>
         </div>
         <div class="game_over_screen">
             <h1>GAME OVER</h1>
